--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
+    "tailwindcss-animated": "^1.1.2",
     "vue": "^3.5.13",
+    "vue3-lottie": "^3.3.1",
     "vuetify": "3.7.0-beta.1"
   },
   "devDependencies": {
+    "@types/node": "^22.10.1",
     "@vitejs/plugin-vue": "^5.2.1",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
