--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "crypto-js": "^4.2.0",
+    "enum": "^3.0.4",
     "tailwindcss-animated": "^1.1.2",
     "vue": "^3.5.13",
+    "vue-router": "^4.5.0",
     "vue3-lottie": "^3.3.1",
     "vuetify": "3.7.0-beta.1"
   },
