--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,13 @@
 {
-  "files": [],
-  "references": [
-    {
-      "path": "./tsconfig.app.json"
-    },
-    {
-      "path": "./tsconfig.node.json"
-    }
-  ],
   "compilerOptions": {
     "baseUrl": "./src", // 基本路径为 `src` 目录
     "paths": {
       "@/*": [
         "*"
-      ] // 将 `@` 别名映射到 `src` 目录
-    }
-  }
+      ], // 将 `@` 别名映射到 `src` 目录
+    },
+  },
+  "include": [
+    "./typed-router.d.ts"
+  ]
 }
