chore: add types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
         "*"
       ], // 将 `@` 别名映射到 `src` 目录
     },
+    "moduleResolution": "Bundler",
+    "module": "ESNext",
   },
   "include": [
     "src/**/*.ts",
