--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdi/font": "^7.4.47",
     "crypto-js": "^4.2.0",
     "enum": "^3.0.4",
+    "pinia": "^2.2.8",
     "tailwindcss-animated": "^1.1.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
